--- a/index.html
+++ b/index.html
@@ -44,21 +44,30 @@
     <div class="container">
       <!-- Left Column -->
       <aside class="left">
-        <div class="news-item">
-          <h3>Iran says 'finger on trigger'</h3>
-          <p>Response to Trump's threat...</p>
-          <small>2 hours ago</small>
+        <div class="news-item with-img">
+          <img src="./iran.jpg" alt="news" />
+          <div>
+            <h3>Iran says 'finger on trigger'</h3>
+            <p>Response to Trump's threat...</p>
+            <small>2 hours ago</small>
+          </div>
         </div>
 
-        <div class="news-item">
-          <h3>Gold price hits record</h3>
-          <p>16 thousand taka increase in a day</p>
-          <small>23 minutes ago</small>
+        <div class="news-item with-img">
+          <img src="./gold.jpg" alt="news" />
+          <div>
+            <h3>Gold price hits record</h3>
+            <p>16 thousand taka increase in a day</p>
+            <small>23 minutes ago</small>
+          </div>
         </div>
 
-        <div class="news-item">
-          <h3>Dhaka tops air pollution</h3>
-          <small>1 hour ago</small>
+        <div class="news-item with-img">
+          <img src="./polution.jpg" alt="news" />
+          <div>
+            <h3>Dhaka tops air pollution</h3>
+            <small>1 hour ago</small>
+          </div>
         </div>
       </aside>
 
