--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Prothom Alo Clone</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <!-- Header -->
     <header class="top-header">
@@ -40,32 +41,40 @@
       </div>
     </nav>
 
-    <!--  Main Layout  -->
+    <!-- Main Layout -->
     <div class="container">
       <!-- Left Column -->
       <aside class="left">
         <div class="news-item with-img">
-          <img src="./iran.jpg" alt="news" />
+          <img src="./iran.jpg" alt="Iran news" />
           <div>
             <h3>Iran says 'finger on trigger'</h3>
-            <p>Response to Trump's threat...</p>
+            <p>
+              Iran warned of strong retaliation following recent political
+              tensions.
+            </p>
             <small>2 hours ago</small>
           </div>
         </div>
 
         <div class="news-item with-img">
-          <img src="./gold.jpg" alt="news" />
+          <img src="./gold.jpg" alt="Gold price" />
           <div>
             <h3>Gold price hits record</h3>
-            <p>16 thousand taka increase in a day</p>
+            <p>
+              Gold prices surged sharply due to global economic uncertainty.
+            </p>
             <small>23 minutes ago</small>
           </div>
         </div>
 
         <div class="news-item with-img">
-          <img src="./polution.jpg" alt="news" />
+          <img src="./polution.jpg" alt="Air pollution" />
           <div>
             <h3>Dhaka tops air pollution</h3>
+            <p>
+              Air quality index reaches hazardous levels across the capital.
+            </p>
             <small>1 hour ago</small>
           </div>
         </div>
@@ -73,23 +82,30 @@
 
       <!-- Middle Column -->
       <main class="middle">
-        <img src="./news7.jpg" />
+        <img src="./news7.jpg" alt="Main news" />
         <h2>Expatriates are vocal in Sylhet–Sunamganj polling stations</h2>
-        <p>Thousands of expatriates are campaigning and funding candidates.</p>
+        <p>
+          Thousands of expatriates are actively supporting candidates through
+          funding and campaigns.
+        </p>
         <small>25 minutes ago</small>
 
         <div class="horizontal-news">
-          <img src="./news6.jpg" />
+          <img src="./news6.jpg" alt="Mob incident" />
           <div>
             <h4>Mob Create On Prothomalo</h4>
+            <p>Protests erupted following controversial reporting.</p>
             <small>2 hours ago</small>
           </div>
         </div>
 
         <div class="horizontal-news">
-          <img src="./news5.jpg" />
+          <img src="./news5.jpg" alt="Government news" />
           <div>
             <h4>End of Interim Government</h4>
+            <p>
+              Political leaders discuss the transition to a new administration.
+            </p>
             <small>32 minutes ago</small>
           </div>
         </div>
@@ -101,41 +117,45 @@
 
         <div class="news-item">
           <h4>Opinion</h4>
-          <p>Are these decisions advance preparation?</p>
+          <p>Experts analyze whether recent decisions were pre-planned.</p>
           <small>18 hours ago</small>
         </div>
 
         <div class="news-item">
           <h4>World</h4>
-          <p>Why allies are losing trust in the US</p>
+          <p>Global partners are questioning long-term US foreign policies.</p>
           <small>3 hours ago</small>
         </div>
       </aside>
     </div>
 
-    <!-- Bottom News Grid  -->
+    <!-- Bottom News Grid -->
     <section class="news-grid">
       <div class="card">
-        <img src="./news4.jpg" />
+        <img src="./news4.jpg" alt="Independence Day" />
         <h4>Independence Day</h4>
+        <p>Nation celebrates with events honoring freedom fighters.</p>
         <small>3 hours ago</small>
       </div>
 
       <div class="card">
-        <img src="./news3.jpg" />
+        <img src="./news3.jpg" alt="Osman Hadi" />
         <h4>Who is Osman Hadi?</h4>
+        <p>A closer look at the rising political figure.</p>
         <small>3 hours ago</small>
       </div>
 
       <div class="card">
-        <img src="./news2.jpg" />
+        <img src="./news2.jpg" alt="Protest" />
         <h4>Protest</h4>
+        <p>Demonstrators demand reforms across major cities.</p>
         <small>5 hours ago</small>
       </div>
 
       <div class="card">
-        <img src="./news1.jpg" />
+        <img src="./news1.jpg" alt="Trump presidency" />
         <h4>One year of Trump presidency</h4>
+        <p>An overview of key decisions and controversies.</p>
         <small>4 hours ago</small>
       </div>
     </section>
